chore: add relative urls and cannonify urls

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,5 @@
-baseURL = ''
+baseURL = 'https://ashirt-ops.github.io/'
 languageCode = 'en-us'
 title = 'Ashirt'
-relativeURLs = "True"
+relativeURLs = true
+cannonifyURLs = true
