--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://ashirt-ops.github.io/'
+baseURL = 'https://ashirt-ops.github.io/ashirt.io'
 languageCode = 'en-us'
 title = 'Ashirt'
 relativeURLs = true
