--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,5 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://ashirt-ops.github.io/'
 languageCode = 'en-us'
 title = 'Ashirt'
+relativeURLs = true
+cannonifyURLs = true
