--- a/hugo.toml
+++ b/hugo.toml
@@ -3,3 +3,6 @@ languageCode = 'en-us'
 title = 'Ashirt'
 relativeURLs = true
 cannonifyURLs = true
+
+[markup.goldmark.renderer]
+  unsafe = true # Allow HTML in md files
